<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:myc="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px">
            <com.adayo.app.settingsbt.ui.view.ItemMenuViewBt
                android:id="@+id/setting_bt_switch"
                myc:showSwitchButton="true"
                android:layout_height="100px"
                android:layout_width="match_parent"
                app:text="@string/btstring1"
                app:textColor="@color/bt_normal_color" />
            <RelativeLayout
                android:layout_width="84px"
                android:layout_marginLeft="54px"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_height="44px">
                <ImageView
                    android:layout_width="32px"
                    android:layout_centerInParent="true"
                    android:id="@+id/setting_bt_loading"
                    android:visibility="gone"
                    android:src="@drawable/bt_setting_loading"
                    android:layout_height="32px" />

            </RelativeLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setting_zi"
            android:orientation="vertical">

            <com.adayo.app.settingsbt.ui.view.ItemMenuViewBt
                android:id="@+id/setting_bt_auto_connect"
                myc:showSwitchButton="true"
                android:layout_height="100px"
                android:layout_width="match_parent"
                app:text="@string/btstring2"
                app:textColor="@color/bt_normal_color" />

            <com.adayo.app.settingsbt.ui.view.ItemMenuViewBt
                android:id="@+id/setting_bt_auto_answer"
                myc:showSwitchButton="true"
                android:layout_height="100px"
                android:layout_width="match_parent"
                app:text="@string/btstring3"
                app:textColor="@color/bt_normal_color" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="58px"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50px"
                    android:id="@+id/setting_sbm"
                    android:text="@string/btstring4"
                    android:textColor="@color/bt_normal_color"
                    android:textSize="26px" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/setting_bt_name"
                    android:layout_width="170px"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10px"
                    android:gravity="center"
                    android:textColor="@color/bt_name_color"
                    android:textSize="24px" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56px"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100px"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50px"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/setting_lspd"
                            android:text="@string/btstring5"
                            android:textColor="@color/bt_normal_color"
                            android:textSize="26px" />

                        <TextView
                            android:id="@+id/setting_bt_history_matching_tip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btstring6"
                            android:textColor="@color/bt_tip_color"
                            android:textSize="20px" />
                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <!--<Button-->
                    <!--android:layout_width="90px"-->
                    <!--android:layout_height="90px"-->
                    <!--android:layout_marginRight="50px"-->
                    <!--android:id="@+id/setting_bt_history_matching_refresh"-->
                    <!--android:background="@drawable/select_refresh"/>-->
                    <!--<RelativeLayout-->
                        <!--android:layout_width="90px"-->
                        <!--android:layout_height="90px"-->
                        <!--android:layout_marginRight="50px">-->

                        <!--<ImageView-->
                            <!--android:id="@+id/setting_bt_history_matching_refresh"-->
                            <!--android:layout_width="80px"-->
                            <!--android:layout_height="80px"-->
                            <!--android:scaleType="center"-->
                            <!--android:layout_centerInParent="true"-->
                            <!--android:src="@drawable/select_refresh" />-->
                    <!--</RelativeLayout>-->

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/setting_bt_history_matching_list"
                    android:layout_width="match_parent"
                    android:layout_height="160px"
                    android:layout_marginLeft="50px"
                    android:layout_marginRight="50px"
                    android:visibility="gone">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100px"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50px"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btstring7"
                            android:id="@+id/setting_ssxsb"
                            android:textColor="@color/bt_normal_color"
                            android:textSize="26px" />

                        <TextView
                            android:id="@+id/setting_bt_search_tip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btstring8"
                            android:textColor="@color/bt_tip_color"
                            android:textSize="20px" />
                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                    <!--<Button-->
                    <!--android:layout_width="90px"-->
                    <!--android:layout_height="90px"-->
                    <!--android:layout_marginRight="50px"-->
                    <!--android:id="@+id/setting_bt_search_refresh"-->
                    <!--android:background="@drawable/select_refresh"/>-->

                        <ImageView
                            android:id="@+id/setting_bt_search_refresh"
                            android:layout_width="80px"
                            android:layout_height="80px"
                            android:layout_marginRight="50px"
                            android:scaleType="center"
                            android:src="@drawable/select_refresh" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/setting_bt_search_list"
                    android:layout_width="match_parent"
                    android:layout_height="320px"
                    android:layout_marginLeft="50px"
                    android:layout_marginRight="50px"
                    android:visibility="gone">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>




    </LinearLayout>
</ScrollView>